# deepfreeze

./: .gitignore  .gitleaks.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  NOTICE  README.md  config.py  credentials  deepfreeze.sublime-workspace  install.sh  pyproject.toml  requirements.txt  supacode.json  tasks.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: gitleaks.yml  release.yml  test.yml
.opencode/plans/: TODO-fix-test-mocking.md  deepfreeze-ui-implementation-plan.md  phase2-audit-integration-plan.md  session-state-2026-03-22.md
deepfreeze/: config.py  deepfreeze.py  rotate-monthly-repository.py  rotate-monthly-repository.yml.reference
examples/: README.md  config.yml.example  crontab-example.txt  deepfreeze-rotate.service  deepfreeze-rotate.timer
notes/: restoring.md
src/: config.py  create-monthly-repository  http_ca.crt  rotate-monthly-repository.py  rotate-monthly-repository.yml  rotate-monthly-repository.yml.reference
tests/: test_deepfreeze.py
tests/cli/: test_actions.py  test_audit.py  test_cli.py  test_config.py  test_esclient.py  test_exceptions_constants.py  test_helpers.py  test_independence.py  test_integration.py  test_package.py  test_s3client.py  test_server_auth.py  test_utilities.py  test_validators.py
tests/integration/: README.md  conftest.py  test_00_smoke.py  test_01_setup.py  test_02_status.py  test_03_rotate.py  test_04_thaw.py  test_05_refreeze.py  test_06_cleanup.py  test_07_repair_metadata.py  test_10_api_health.py  test_11_api_status.py  test_12_api_actions.py  test_20_workflow_full.py  test_30_webui.py
tests/integration/helpers/: diagnostics.py  es_verify.py  waiter.py
