[tool.poetry]
name = "deepfreeze"
version = "0.1.0"
description = ""
authors = ["Bret Wortman <bret.wortman@elastic.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
boto3 = "^1.35.18"
botocore = "^1.35.18"
elasticsearch = "^8.15.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
deepfreeze = "deepfreeze.deepfreeze:deepfreeze"